--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,13 @@ h1 {
   text-shadow: 1px 1px 6px black;
 }
 
+h2 {
+  font-family: 'Cinzel', sans-serif;
+  font-weight: 400;
+  color: #D3D3D3;
+  text-shadow: 1px 1px 3px black;
+}
+
 .home-card-title {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 32px;
@@ -151,6 +158,12 @@ a.breadcrumb {
 
 .review-content {
   padding: 5%;
+}
+
+/* Profile */
+.tabs .tab a {
+  color: #161214 !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 /* Footer */
