Start adding add review page To allow users to add reviews to the site, I started creating a page for users to create a new book review. I've added category and ratings options as well as an overflow for the form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.container {
+  max-height: 700px;
+}
+
 nav .nav-wrapper {
   width: 100%;
   
@@ -166,6 +170,62 @@ a.breadcrumb {
   font-family: Arial, Helvetica, sans-serif !important;
 }
 
+
+
+/* Add Review */
+
+.overflow-form {
+  width: 1000px;
+  height: 550px;
+  overflow-y: scroll;
+  padding: 3%;
+}
+
+.rate-padding {
+  padding-left: 75px;
+    padding-top: 25px;
+}
+
+.rate {
+    float: left;
+    height: 50px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:28px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
+
+
+
+
+
 /* Footer */
 
 ul li {
@@ -318,6 +378,10 @@ ul#nav-mobile.sidenav {
 
 .contact-pop {
   width: 80%;
+}
+
+.rate-padding {
+  padding: 0;
 }
 
 }
