--- a/templates/book-reviews.html
+++ b/templates/book-reviews.html
@@ -55,7 +55,7 @@
 <div class="icon-sec-background">
   <div class="review-container">
 
-    <h2 class="center">Read the latest reviews by Horror House members</h2>
+    <h2 class="center">Read the latest reviews</h2>
     <div class="row">
       {% for books in books %}
       <div class="col s12 m6 l6 xl3">
