--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,8 +26,17 @@
     </div>      
   </div>
 
+{% endblock %}
 
-    
 
+
+{% block below_content %}
+
+{% if session.user %}
+
+<h2>Reviews by {{username}}</h2>
+{% else %}
+{{ super() }}
+{% endif %}
 
 {% endblock %}
