Edit form rating and category fields Fixed the rating and category fields to work properly on the static site. Started connecting the category dropdown to MongoDB

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -66,6 +66,14 @@
     color: white;
   }
 
+  .star-input  label {
+    color: #C8C8C8;
+  }
+
+  .star-input  label:before {
+    color: #C8C8C8;
+  }
+
   /* Materialize input styles for forms*/
 
 /* label color */
