--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,19 +12,22 @@
     <div class="col s12">
         <ul id="tabs-swipe-demo" class="tabs red lighten-1">
             <li class="tab col s3"><a class="active" href="#main-info">Main Info</a></li>
-            <li class="tab col s3"><a  href="#add-pic">Add Profile Pic</a></li>
+            <li class="tab col s3"><a href="#add-pic">Add Profile Pic</a></li>
             <li class="tab col s3"><a href="#update-info">Update info</a></li>
-          </ul>
-          <div id="main-info" class="col s12 individual-review-background">
-              <div class="center">
-                  <h3>Horror House reviewer {{username}}'s info</h3>
+        </ul>
+        <div id="main-info" class="col s12 individual-review-background">
+            <div class="center">
+                <h3>Horror House reviewer {{username}}'s info</h3>
 
-              </div>
-          </div>
-          <div id="add-pic" class="col s12 red"><h1>THIS IS A TEST!</h1></div>
-          <div id="update-info" class="col s12 green">Test 3</div>
-    </div>      
-  </div>
+            </div>
+        </div>
+        <div id="add-pic" class="col s12 red">
+            <h1>THIS IS A TEST!</h1>
+        </div>
+        <div id="update-info" class="col s12 green">Test 3</div>
+    </div>
+</div>
+
 
 {% endblock %}
 
