--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,52 +175,63 @@ a.breadcrumb {
 /* Add Review */
 
 .overflow-form {
-  width: 1000px;
+  width: 100%;
   height: 550px;
   overflow-y: scroll;
   padding: 3%;
+  border-radius: 15px;
 }
 
 .rate-padding {
-  padding-left: 75px;
-    padding-top: 25px;
+  padding-right: 85px;
+padding-top: 25px;
+} 
+
+.dropdown-content li span{
+  color: black;
 }
 
-.rate {
-    float: left;
-    height: 50px;
-    padding: 0 10px;
+
+.star-input input {
+  border: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  opacity: 0;
 }
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
+
+.star-input  label {
+  position: relative;
+  float: right;
 }
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:28px;
-    color:#ccc;
+
+.star-input  label:before {
+  margin: 5px;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f005";
+  display: inline-block;
+  font-size: 1.5em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
-.rate:not(:checked) > label:before {
-    content: '★ ';
+
+.star-input  input:checked ~ label:before {
+  color: #FFC107;
 }
-.rate > input:checked ~ label {
-    color: #ffc700;    
+
+.star-input  label:hover ~ label:before {
+  color: #ffdb70;
 }
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
+
+.star-input  label:hover:before {
+  color: #FFC107;
 }
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
+
 
 
 
