Pull review by user, pull ratings per review, edit footer To create the edit and delete options, I pulled the unique user reviews to the profile page. To pull review ratings to the book reviews page, I created a for loop. The footer was edited to be neater

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,10 @@ padding-top: 25px;
 
 /* Footer */
 
+.page-footer {
+  padding: 20px;
+}
+
 ul li {
   float:left;
   display:inline;
@@ -259,7 +263,7 @@ div.social-links-position.col.l3.m6 {
 }
 
 div.col.l3.m6.contact-button-position {
-  padding-top: 2%;
+  padding-top: 1.5%;
 }
 
 
