--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,11 +35,33 @@
 
 {% block below_content %}
 
-{% if session.user %}
+
 
 <h2>Reviews by {{username}}</h2>
-{% else %}
-{{ super() }}
-{% endif %}
+{% for book in books %}
+      <div class="col s12 m6 l6 xl3">
+
+        <div class="card large card-colour z-depth-5">
+
+          <div class="card-image">
+            <img src={{book.image}}>
+          </div>
+          <div class="card-content center">
+            <p>{{book.title}}
+              <br>
+              by {{book.author}}
+            </p>
+            <div class="center review-btn-position">
+              <a href="{{ url_for('individual', books_id=book._id) }}"
+                class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn">
+                Read more
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      {% endfor %}
+
 
 {% endblock %}
