--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -12,14 +12,14 @@
     <div class="col s12 l12">
 
         <div class="overflow-form individual-review-background">
-            <form method="POST" action="">
+            <form method="POST" action="{{ url_for('add') }}">
                 <div class="row">
                     <div class="input-field col s6 l6">
-                        <input id="title" type="text" name="title" class="validate" pattern="[a-zA-Z]+" required>
+                        <input id="title" type="text" name="title" class="validate"  required>
                         <label for="title">Title</label>
                     </div>
                     <div class="input-field col s6 l6">
-                        <input id="author" type="text" name="author" class="validate" pattern="[a-zA-Z]+" required>
+                        <input id="author" type="text" name="author" class="validate"  required>
                         <label for="author">Author</label>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea" data-length="120"
+                        <textarea id="review" name="review" class="validate tooltipped materialize-textarea" minlength="120"
                             data-position="bottom" data-tooltip="Add a paragraph or two reviewing the book" required>
                             </textarea>
                         <label for="review">Review</label>
@@ -49,7 +49,7 @@
 
                 <div class="row">
                     <div class="input-field col s5 l6">
-                        <select multiple>
+                        <select name="category_name" multiple>
                         {% for category in categories %}
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
@@ -61,15 +61,15 @@
                         <br>
                        
                             <div class="star-input rate-padding">
-                            <input type="radio" name="rating" title="1 stars" id="st1" value="1" />
+                            <input type="checkbox" name="rating" title="1 star" id="st1" value="1" />
                             <label for="st1"></label>
-                            <input type="radio" name="rating" title="2 stars" id="st2" value="2" />
+                            <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" />
                             <label for="st2"></label>
-                            <input type="radio" name="rating" id="st3" title="3 stars"value="3" />
+                            <input type="checkbox" name="rating" id="st3" title="3 stars"value="3" />
                             <label for="st3"></label>
-                            <input type="radio" name="rating" id="st4" title="4 stars" value="4" />
+                            <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" checked/>
                             <label for="st4"></label>
-                            <input type="radio" name="rating" id="st5" title="5 stars" value="5" />
+                            <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" />
                             <label for="st5"></label>
                         </div>
                     </div>
@@ -79,8 +79,7 @@
                 </div>
 
                 <div class="center">
-                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit"
-                        name="action">Create review
+                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit">Create review
                     </button>
                 </div>
 
