--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
@@ -19,10 +19,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Crimson+Text
     :ital,wght@0,400;0,600;1,600&family=Open+Sans:wght@400;600&family=Poppins&display=swap" rel="stylesheet">
 
-  
+
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}" id="mode-link">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
 
@@ -70,16 +70,16 @@
           <br>
           <li><a class="sidenav-close" href="#!">&times; Close</a></li>
         </ul>
-      
+
         <a href="#" data-target="nav-mobile" class="sidenav-trigger">
           <i class="material-icons mobile-icon">add_box</i></a>
-    
+
 
       </div>
 
     </nav>
   </div>
-  
+
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -89,24 +89,24 @@
         <section>
           <!-- flash messages -->
           {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                  {% for message in messages %}
-                      <div class="row flashes">
-                          <h4 class="red lighten-3 center-align">{{ message }}</h4>
-                      </div>
-                  {% endfor %}
-              {% endif %}
+          {% if messages %}
+          {% for message in messages %}
+          <div class="row flashes">
+            <h4 class="red lighten-3 center-align">{{ message }}</h4>
+          </div>
+          {% endfor %}
+          {% endif %}
           {% endwith %}
         </section>
-        
-          <div class="card btn-toggle">
-            <div class="card-content toggle-card">
+
+        <div class="card btn-toggle">
+          <div class="card-content toggle-card">
             <i class="small  material-icons tooltipped" tabindex="0" role="tooltip" data-position="bottom"
               data-tooltip="Click to toggle dark/light mode">
               brightness_medium</i>
           </div>
         </div>
-       
+
 
         {% block main_heading %}{% endblock %}
 
@@ -119,63 +119,35 @@
       </div>
     </div>
 
-    <div class="parallax"><img src="{{url_for('static', filename='images/horror-background.jpg')}}" 
-      alt="Background image of books, candle, potion, and skull">
+    <div class="parallax"><img src="{{url_for('static', filename='images/horror-background.jpg')}}"
+        alt="Background image of books, candle, potion, and skull">
     </div>
 
   </div>
   {% block below_content %}
   {% endblock %}
+
+
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <p>“I am all in a sea of wonders. I doubt; I fear; I think strange things,
-            which I dare not confess to my own soul.”
-            ― Bram Stoker, Dracula</p>
+  
+  
+        <div class="col l3 m6 xl6 contact-button-position">
+          <a id="form-btn" class="btn-large  btn-styles waves-effect waves-dark lighten-1" aria-label="Open contact form"
+            tabindex="0" role="form">Contact Us</a>
         </div>
-
-        <div class="social-links-position col l3 m6">
-          <ul class="footer-links">
-
-            <li>
-              <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener">
-                <i class="fab fa-facebook-f" aria-hidden="true" tabindex="0"></i>
-              </a>
-            </li>
-
-            <li>
-              <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener">
-                <i class="fab fa-instagram" aria-hidden="true" tabindex="0"></i>
-              </a>
-            </li>
-
-            <li>
-              <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank" rel="noopener">
-                <i class="fab fa-twitter" aria-hidden="true" tabindex="0"></i>
-              </a>
-            </li>
-
-          </ul>
-        </div>
-
-
-        <div class="col l3 m6 contact-button-position">
-          <a id="form-btn" class="btn-large  btn-styles waves-effect waves-dark lighten-1"
-            aria-label="Open contact form" tabindex="0" role="form">Contact Us</a>
-        </div>
-
+  
         <!--Hidden Contact Form-->
-
+  
         <div class="hide-form contact-modal" id="modal">
-
+  
           <div class="contact-pop">
-
+  
             <span id="close-form" tabindex="0" role="button">&times;</span>
-
-            <form aria-label="Send us your comments, ideas, or feedback" 
-              id="contactForm" class="form-padding">
-
+  
+            <form aria-label="Send us your comments, ideas, or feedback" id="contactForm" class="form-padding">
+  
               <p class="mobile-heading form-heading">Tell us more!</p>
               <br>
               <label for="name" class="form-font label-display mobile-label">Name</label>
@@ -193,32 +165,50 @@
                 required></textarea>
               <br>
               <br>
-              <input type="submit" value="Send" onsubmit="return sendMail(this);" 
-                class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn"
-                aria-label="Submit this form">
+              <input type="submit" value="Send" onsubmit="return sendMail(this);"
+                class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" aria-label="Submit this form">
             </form>
           </div>
         </div>
-
-
+  
+        <div class="social-links-position col l3 m6">
+          <ul class="footer-links">
+  
+            <li>
+              <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener">
+                <i class="fab fa-facebook-f" aria-hidden="true" tabindex="0"></i>
+              </a>
+            </li>
+  
+            <li>
+              <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener">
+                <i class="fab fa-instagram" aria-hidden="true" tabindex="0"></i>
+              </a>
+            </li>
+  
+            <li>
+              <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank" rel="noopener">
+                <i class="fab fa-twitter" aria-hidden="true" tabindex="0"></i>
+              </a>
+            </li>
+  
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-        Made by Christine GK Designs
-      </div>
-    </div>
-
+  
+  
+  
   </footer>
 
 
   <!--  Scripts-->
-            
+
   <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 
-    <!--Sweet Alert-->
+  <!--Sweet Alert-->
 
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" type="text/javascript"></script>
 
 
   <!-- Custom scripts -->
@@ -233,12 +223,12 @@
   {% endblock %}
 
 
-    <!--EmailJS-->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript"></script>
-    <script type="text/javascript">(function () {
-        emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
-      })();
-    </script>
+  <!--EmailJS-->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" type="text/javascript"></script>
+  <script type="text/javascript">(function () {
+      emailjs.init("user_a8QTjCWqE9AEZDgd6Xxqb");
+    })();
+  </script>
 
 </body>
 
